# ship-ai-agent

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
src/: config.py  pdf_processor.py  query_engine.py  ui.py  vector_db.py
src/templates/: index.html
tests/: test_config.py  test_pdf_processor.py  test_query_engine.py  test_ui.py  test_vector_db.py
